--- a/so_trabalho01_201911912/resources/styles/work-area-icon.css
+++ b/so_trabalho01_201911912/resources/styles/work-area-icon.css
@@ -6,3 +6,9 @@ WorkAreaIcon {
 WorkAreaIcon:hover {
   -fx-border-color: rgb(99, 147, 249);
 }
+
+WorkAreaIcon .label .text {
+  -fx-fill: white;
+  -fx-stroke: black;
+  -fx-stroke-width: 0.5px;
+}
