Memory linked list created and implemented

--- a/so_trabalho05_201911912/resources/styles/styles.css
+++ b/so_trabalho05_201911912/resources/styles/styles.css
@@ -12,3 +12,10 @@ InMemoryProcessView {
   -fx-border-width: 1px;
   -fx-padding: 2px;
 }
+
+FreeSpaceView {
+  -fx-border-color: yellow;
+  -fx-border-style: solid;
+  -fx-border-width: 1px;
+  -fx-padding: 2px;
+}
